welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:1: error: identifier expected but 'override' found.
def override run(){
    ^